# create_pypi_skeleton

./: README.md  pyproject.toml
src/create_pypi_skeleton/: __init__.py  __main__.py
