
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create_pypi_skeleton"
version = "0.0.1"
authors = [
    { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "SOME DESCRIPTION"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
Homepage = "YOUR HOMEPAGE LINK eg. https://github.com/github_username/project_name"
Issues = "YOUR ISSUES LINK eg. https://github.com/github_username/project_name/issues"
