
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create_pypi_skeleton"
version = "0.0.7"
authors = [
    { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "This module automatically creates a PyPI project skeleton for you so you don't have to do this manually."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/zlliu246/create_pypi_skeleton"
Issues = "https://github.com/zlliu246/create_pypi_skeleton/issues"
